[tool.black]
line-length = 75
target-version = ['py37']

[tool.poetry]
name = "rentomatic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
wheel = "^0.41.3"
watchdog = "^3.0.0"
flake8 = "^6.1.0"
sphinx = "^7.2.6"
punch-py = "^2.0.0"
tox = "^4.11.3"
coverage = "^7.3.2"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
